--- a/packages/styles/scss/patterns/sub-patterns/content-item/_content-item.scss
+++ b/packages/styles/scss/patterns/sub-patterns/content-item/_content-item.scss
@@ -20,7 +20,7 @@
   }
   .#{$prefix}--content-item {
     margin-top: $carbon--spacing-07;
-    margin-bottom: $carbon--spacing-09;
+    margin-bottom: $carbon--spacing-07;
     &__heading,
     &__copy {
       @include carbon--breakpoint(md) {
